# Predictive-Maintenance-of-Machinery-Using-Temperature-Vibration-Analysis

./: README.md
PredictiveMaintenance/dashboard/: alert_sounds.py  dashboard.py  data_processor.py  requirements.txt  serial_reader.py
PredictiveMaintenance/docs/: README.md  architecture.md  deployment_guide.md  interview_prep.md  resume_description.md
PredictiveMaintenance/firmware/: CMakeLists.txt
PredictiveMaintenance/firmware/main/: alert.c  alert.h  anomaly.c  anomaly.h  comm.c  comm.h  config.h  filter.c  filter.h  main.c  sensors.c  sensors.h
PredictiveMaintenance/simulation/: block_diagram.md  circuit_diagram.md  component_list.md  proteus_guide.md
